--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -18,29 +18,37 @@
             left: 5%;
             background: url('__static__/img/Group20.png');
         }
+        .swiper-slide{
+            background-position: center;background-size: cover;
+        }
+        .swiper-container {
+            width: 95%;
+            height: 100%;
+            margin:0 auto;
+        }
     </style>
 </head>
 <body>
     <div class="swiper-container top_banner">
         <div class="top_right">Italian tranquility</div>
         <div class="swiper-wrapper banner_lunbo">
-            <div class="swiper-slide"><img src="__static__/img/Banner.png" /></div>
-            <div class="swiper-slide"><img src="__static__/img/101381.png" /></div>
+            <div class="swiper-slide" style="background-image:url('__static__/img/Banner.png');"></div>
+            <!--<div class="swiper-slide" style="background-image:url('__static__/img/101381.png');"></div>-->
         </div>
-        <div class="swiper-pagination"></div>
+        <!--<div class="swiper-pagination"></div>-->
         <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <!--<div class="swiper-button-next"></div>-->
+        <!--<div class="swiper-button-prev"></div>-->
     </div>
     <div class="top_meau">
         <div class="left_meau">Architectural Group</div>
         <ul>
-            <li>Home</li>
-            <li>Honor</li>
-            <li>Building</li>
-            <li>Technology</li>
-            <li>Designer</li>
-            <li>Contact</li>
+            <li>首页</li>
+            <li>关于普特链</li>
+            <li>普特链分配方案</li>
+            <li>普特链路线图</li>
+            <li>我们的团队</li>
+            <li>白皮书</li>
         </ul>
     </div>
     <div class="honor">
@@ -62,12 +70,62 @@
                 <li>#<span style="font-family: LucidaGrande;font-size: 40px;color: #000000;">1</span></li>
                 <li>#<span style="font-family: LucidaGrande;font-size: 40px;color: #000000;">2</span></li>
                 <li>#<span style="font-family: LucidaGrande;font-size: 40px;color: #000000;">3</span></li>
+                <li>#<span style="font-family: LucidaGrande;font-size: 40px;color: #000000;">4</span></li>
+                <li>#<span style="font-family: LucidaGrande;font-size: 40px;color: #000000;">5</span></li>
             </div>
             <div class="honor_main_main">
                 <li>
                     <div class="h_m_m_word">
-                       <h3>FUTURE HOME</h3>
-                        <h5>Integration of technology and home</h5>
+                       <h3>什么是普特链</h3>
+                        <h5>What is Put Link?</h5>
+                        普特链（Put link）是为了实现全球地产 ICO、地产类投资及产权交易的分<br/>
+                        布式区块链系统，通过将现有的区块链技术在地产领域实际应用，完成地产项目<br/>
+                        的投融资、确权、交易，实现全球跨境地产投资；并逐步将 AI 及物联网融入到<br/>
+                        系统中，最终打造成真正去中心化的分布式区块链系统。<br/>
+                    </div>
+                    <img src="__static__/img/500260597.png" class="pic_1"/>
+                    <img src="__static__/img/index_1.png" class="pic_2"/>
+                </li>
+                <li>
+                    <div class="h_m_m_word">
+                        <h3>为什么选择普特链</h3>
+                        <h5>Why choose Put Link?</h5>
+                        普特链的创立，目标在于消除现有 ICO 项目中存在的大量泡沫，让数字资<br/>
+                        产和房地产项目绑定，仍房地产项目所获得的收益再转换为数字资产，让更多用<br/>
+                        户通过自己所了解的房地产投资进入到数字资产领域。同时，通过 AI、物联网、<br/>
+                        区块链技术解决跨境投资、管理、分红以及权益交割等一系列问题，使得现有的<br/>
+                        房地产项目更加透明，信息更加准确，幵陈低交易的成本。<br/>
+                    </div>
+                    <img src="__static__/img/500260597.png" class="pic_1"/>
+                    <img src="__static__/img/index_1.png" class="pic_2"/>
+                </li>
+                <li>
+                    <div class="h_m_m_word">
+                        <h3>普特链的特点</h3>
+                        <h5>The characteristics of Put Link</h5>
+                        普特链作为优资恒信全球资产朋务平台癿衍生项目，为全球地产项目提供新<br/>
+                        癿金融投资斱式，可以为优资恒信全球资产朋务平台中，符合条件癿资产项目实<br/>
+                        现数字化，宋成地产 ICO，资产拆分重组以及产权交易等功能。<br/>
+                    </div>
+                    <img src="__static__/img/500260597.png" class="pic_1"/>
+                    <img src="__static__/img/index_1.png" class="pic_2"/>
+                </li>
+                <li>
+                    <div class="h_m_m_word">
+                        <h3>普特链的设计实现</h3>
+                        <h5>The design of Put Link</h5>
+                        普特链采用双货币体系，即 P-share 和 P-cash。<br/>
+                        成立普特链资产管理委员会，统一对平台合作癿房地产项目迕行审核、监管、
+                        产权代持、分配收益等工作。<br/>
+                        普特链的分层结构、普特链的链路结构、双币制度
+                    </div>
+                    <img src="__static__/img/500260597.png" class="pic_1"/>
+                    <img src="__static__/img/index_1.png" class="pic_2"/>
+                </li>
+                <li>
+                    <div class="h_m_m_word">
+                        <h3>加入众筹</h3>
+                        <h5>（众筹倒计时） </h5>
                         Design inspiration of future architecture<br/>
                         Artificial intelligence of future science and<br/>
                         technology,Make life more confortable
@@ -79,7 +137,7 @@
         </div>
     </div>
     <div class="building">
-        <div class="building_top">Building System</div>
+        <div class="building_top">普特链的分配方案</div>
         <div class="building_main">
                 <div class="b_m_word">
                     <h3>ABOUT</h3>
@@ -159,7 +217,7 @@
         </div>
     </div>
     <div class="technology">
-                <div class="tech_title">Our technological advantage</div>
+                <div class="tech_title">普特拉的路线图</div>
                 <div class="tech_main">
                     <li>
                         <p>Safety of Putting chain</p>
@@ -194,7 +252,7 @@
     <div class="designer">
         <div class="designer_left">
             <div class="d_l_2">
-                DESIGNERS
+                我们的团队
             </div>
         </div>
         <div class="designer_main">
@@ -223,8 +281,8 @@
     </div>
     <div class="contact">
             <div class="contact_top">
-                <div class="contact_question">Have a question ?</div>
-                <div class="contact_right"><img src="__static__/img/Group30.png" /></div>
+                <div class="contact_question">白皮书下载</div>
+                <div class="contact_right"><a href="__back__/public/download/普特链白皮书V1.17.pdf" download><img src="__static__/img/Group30.png" /></a></div>
             </div>
             <div class="contact_bottom">
                 <div class="contact_bottom_left">
@@ -258,4 +316,5 @@
 </html>
 <script src="__static__/js/jquery.min.js"></script>
 <script src="__static__/js/swiper.min.js"></script>
+<script src="__static__/js/jquery.nicescroll.js"></script>
 <script src="__static__/js/index.js"></script>
