--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -140,13 +140,13 @@
         <div class="building_top">普特链的分配方案</div>
         <div class="building_main">
                 <div class="b_m_word">
-                    <h3>ABOUT</h3>
+                    <h3>项目类型</h3>
                     <hr style="width:3%;text-align: center;"/>
-                    <h5>Arhitectural style refers to<br/>architural design In content and<br/>appearance Charateristics reflected</h5>
-                    Kogi Cosby sweater ethical<br/>
-                    squid irony disrupt,organic<br/>
-                    tote bag gluten-free X0X0<br/>
-                    wolf typewriter mixtape<br/>
+                    <h5>公寓、写字楼、商场、酒庖、商铺等经营类项目</h5>
+                    单一项目建立独立公司持有，<br/>
+                    统一管理物业的维护、收益、<br/>
+                    代缴各类费用及税费的工作，<br/>
+                    项目出售后，公司注销
                     <img src="__static__/img/Group_16.png" class="pic_more"/>
                 </div>
             <img src="__static__/img/156490.png" class="pic_3"/>
@@ -157,7 +157,7 @@
         </div>
         <div class="building_center building_first">
                 <div class="building_center_top">
-                    Architectural achievement display
+                    物联网房地产项目信息上链
                     <img src="__static__/img/Group8.png" class="prev_button"/>
                     <img src="__static__/img/Group9.png" class="next_button"/>
                 </div>
@@ -165,28 +165,43 @@
                     <li>
                         <div class="building_center_pic"><img src="__static__/img/500483212.png" /></div>
                         <div class="building_center_left">
-                            Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque<br/>
-                            queequeg from between the whale and the ship.
+                            经营数据管理<br/>
+                            了解项目经营性数据，如租户或商户信息，客户名称、建筑面积、<br/>
+                            租约区间、租金、物业费用等，根据租户或商户的信息发更，对数据进行实时调整和更新，直观了解项目的经营状状
                         </div>
                         <div class="building_center_right">
-                            <span>Date</span>April 26.   2017
+                            <span>Date</span>October 23.   2017
                         </div>
                     </li>
                     <li>
                         <div class="building_center_pic"><img src="__static__/img/55d413128f280.png" /></div>
                         <div class="building_center_left">
-                            Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque<br/>
-                            queequeg from between the whale and the ship.
+                            项目差异化管理<br/>
+                            根据项目特性调整数据结构，如酒店、写字楼、公寓、养老院等不<br/>
+
+                            同项目记录信息，做到标准化+定制化功能；
                         </div>
                         <div class="building_center_right">
-                            <span>Date</span>April 26.   2017
+                            <span>Date</span>October 23.   2017
+                        </div>
+                    </li>
+                    <li>
+                        <div class="building_center_pic"><img src="__static__/img/55d413128f280.png" /></div>
+                        <div class="building_center_left">
+                            运维数据管理<br/>
+                            不分析对运维数据进行收集分析，优化和完善现行管理制度，降低项目经<br/>
+
+                            营成本，形成统一高效的管理平台
+                        </div>
+                        <div class="building_center_right">
+                            <span>Date</span>October 23.   2017
                         </div>
                     </li>
                 </ul>
         </div>
         <div class="building_center building_both">
                 <div class="building_center_top">
-                    Atlantis amorous feelings
+                    区块链保障房地产项目资产的有效性和完整性
                     <img src="__static__/img/Group8.png" class="prev_button"/>
                     <img src="__static__/img/Group9.png" class="next_button"/>
                 </div>
@@ -194,59 +209,73 @@
                     <li>
                         <div class="building_center_pic"><img src="__static__/img/500483213.png" /></div>
                         <div class="building_center_left">
-                            Vestibulum interdum vestibulum felis ac molestie. Praesent aliquet quam et libero dictum, vitae<br/>
-                            dignissim leo eleifend. In in turpis turpis. Quisque justo turpis, vestibulum non enim nec, tempor<br/>
-                            mollis mi. Sed vel tristique quam.
+                            房地产项目资产的发行、确权<br/>
+                            房地产项目可发行单一项目货币，实现房地产项目的权益分割，相<br/>
+
+                            应的项目权益通过密钥进行确权，幵记录项目权益交易信息；
                         </div>
                         <div class="building_center_right">
-                            <span>Date</span>Octomber 18.   2017
+                            <span>Date</span>Octomber 23.   2017
                         </div>
                     </li>
                     <li>
                         <div class="building_center_pic"><img src="__static__/img/21312.png" /></div>
                         <div class="building_center_left">
-                            Vestibulum interdum vestibulum felis ac molestie. Praesent aliquet quam et libero dictum, vitae<br/>
-                            dignissim leo eleifend. In in turpis turpis. Quisque justo turpis, vestibulum non enim nec, tempor<br/>
-                            mollis mi. Sed vel tristique quam.
+                            智能合约完成房地产项目资产的交易<br/>
+                            通过智能合约，实现任意规则或条件的项目权益交易，完善房地产<br/>
+
+                            项目的投融资通道，加强项目权益流动性；
                         </div>
                         <div class="building_center_right">
-                            <span>Date</span>Octomber 18.   2017
+                            <span>Date</span>Octomber 23.   2017
+                        </div>
+                    </li>
+                    <li>
+                        <div class="building_center_pic"><img src="__static__/img/21312.png" /></div>
+                        <div class="building_center_left">
+                            分布式数据库记录房地产项目资产信息<br/>
+                            通过使用分布式数据库来记录房地产项目资产信息、交易记录，保
+
+                            证去中心化数据库克免自然灾害、网络攻击及其他因素得破坏，保障所有数据信息的安全性和宋整性。
+                        </div>
+                        <div class="building_center_right">
+                            <span>Date</span>Octomber 23.   2017
                         </div>
                     </li>
                 </ul>
         </div>
     </div>
     <div class="technology">
-                <div class="tech_title">普特拉的路线图</div>
+                <div class="tech_title">普特链的路线图</div>
                 <div class="tech_main">
-                    <li>
-                        <p>Safety of Putting chain</p>
-                        <hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>
-                        Asymmetric information encryption elliptic curve algorithm has<br/>
-                        built-in chain block pute used to maintain the safety of the link,<br/>
-                        For the block generation is not connected with the internal block of<br/>
-                        a surname the fast symmetry information encryption algorithm,<br/>
-                        Do not place the safe speed of coordination in the face,<br/>
-                        Security Enough in the circumstances, not convenient compromise.
-                    </li>
-                    <li>
-                        <p>Putting chain Robustness</p>
-                        <hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>
-                        Push chain is a link system with system robustness,<br/>
-                        Contains the data quality and reliability of Data16 / 38 Quality<br/>
-                        the measure accuracy of the Precision is still considered .<br/>
-                        The robustness of push chain is decided by the collective decision<br/>
-                        of link block, Skipping bad nodes to achieve system fault tolerance .
-                    </li>
-                    <li>
-                        <p>IoT Internet of things intelligent property</p>
-                        <hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>
-                        The IoT records the Putnam link information RPC Port hash,<br/>
-                        Can be given to the intelligent property of logical segmentation,<br/>
-                        Can make the best property into multiple copies .<br/>
-                        The realization of multiple points, transfer, registration,<br/>
-                        authorization, and other operations .
-                    </li>
+                    <!--<li>-->
+                        <!--<p>Safety of Putting chain</p>-->
+                        <!--<hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>-->
+                        <!--Asymmetric information encryption elliptic curve algorithm has<br/>-->
+                        <!--built-in chain block pute used to maintain the safety of the link,<br/>-->
+                        <!--For the block generation is not connected with the internal block of<br/>-->
+                        <!--a surname the fast symmetry information encryption algorithm,<br/>-->
+                        <!--Do not place the safe speed of coordination in the face,<br/>-->
+                        <!--Security Enough in the circumstances, not convenient compromise.-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<p>Putting chain Robustness</p>-->
+                        <!--<hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>-->
+                        <!--Push chain is a link system with system robustness,<br/>-->
+                        <!--Contains the data quality and reliability of Data16 / 38 Quality<br/>-->
+                        <!--the measure accuracy of the Precision is still considered .<br/>-->
+                        <!--The robustness of push chain is decided by the collective decision<br/>-->
+                        <!--of link block, Skipping bad nodes to achieve system fault tolerance .-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<p>IoT Internet of things intelligent property</p>-->
+                        <!--<hr style="width:25%;margin-left:62%;border:1px solid #EBEBEB;"/>-->
+                        <!--The IoT records the Putnam link information RPC Port hash,<br/>-->
+                        <!--Can be given to the intelligent property of logical segmentation,<br/>-->
+                        <!--Can make the best property into multiple copies .<br/>-->
+                        <!--The realization of multiple points, transfer, registration,<br/>-->
+                        <!--authorization, and other operations .-->
+                    <!--</li>-->
                 </div>
     </div>
     <div class="designer">
@@ -258,24 +287,29 @@
         <div class="designer_main">
             <li>
                 <img src="__static__/img/Bitmap.png" class="des_pic"/>
-                <p>Sara Wright</p>
-                Aliquam erat ac ipsum. Integer<br/>
-                aliquam purus. Quisque lorem tortor<br/>
-                fringilla sed.
+                <p>周海林</p>
+                13 年工作经验，历任 TOM 无线业务经理，EOE 副总裁、安卓越移动 CEO、<br/>
+                亚杰基金执行董事。对无线业务有深刻了解。2010 年起开始专注于海内外早期投资，<br/>
+                参不投资 23 个项目，包拪 Oben，Lychee，魔镜 vr 等。<br/>
+                幵在海内外合作基金、理财机构，进行对接。
             </li>
             <li>
                 <img src="__static__/img/Bitmap3.png" class="des_pic"/>
-                <p>Brandon Ross</p>
-                Vestibulum commodo volutpat a,<br/>
-                convallis ac, laoreet enim. Phasellus<br/>
-                fermentum in dolor.
+                <p>Michael SU 区块链负责人</p>
+                曾在澳洲参不创建 Bitcoin Group，全球首家申请上市的比特币企业，并在
+                澳洲成功<br/>部署第一台比特币 ATM，曾担任 BTCTrade 澳洲合伙人，负责运营澳<br/>
+                洲比特币交易网站，幵在墨尔本本地联合 City Discount 推广数字货币支付，<br/>
+                2016 年起担任大红火交易平台 CEO，致力于 FinTech 研究和数字资产、数字<br/>
+                资产合规。
             </li>
             <li>
                 <img src="__static__/img/Bitmap312.png" class="des_pic"/>
-                <p>Kevin Perry</p>
-                Quisque lorem tortor fringilla sed,<br/>
-                vestibulum id, eleifend justo orci<br/>
-                luctus non.
+                <p>Steven WU 海外项目负责人</p>
+                曾任职中国杭州假日之星酒店集团副总裁、中国杭州酷漫居连锁酒店董事长、<br/>
+                Tri President Pty Ltd 公司董事长、宋城集团大洋洲地区 CEO，负责运营两个度<br/>
+                假村酒店，一个旅游服务公司，公寓楼开发项目以及房地产中介服务公司，以及<br/>
+                负责宋城总投资约 8 亿澳元的澳大利亚主题公园项目，总投资约 3 亿澳元的海<br/>
+                边公寓楼项目以及一块单地约 6200 公顷的旅游区域开发项目
             </li>
         </div>
     </div>
@@ -286,13 +320,12 @@
             </div>
             <div class="contact_bottom">
                 <div class="contact_bottom_left">
-                    <p>Architectural Group</p>
-                    Shanghai  is a company engaged in chemical raw materials, electronic products trading<br/>
-                    company .The company was established in May 1998, has many famous enterprises<br/>
-                    at home and abroad (such as XX company) to establish a long-term<br/>
-                    friendly business relationship. Company mainly engaged in mechanical and electrical products<br/>
-                    and electronic products. Since its inception continue to absorb a variety of talents .<br/>
-                    <p>Contact center</p>
+                    <p>版权声明</p>
+                    未经本公司书面许可，<br/>
+                    任何单位及个人不得以任何方式或理由对上述产品、服务、信息、材料的任何部分<br/>
+                    进行使用、复制、修改、抄录、传播或与其它产品捆绑使用、销售。<br/>
+                    凡侵犯本公司版权等知识产权的，本公司必依法追究其法律责任。
+                    <p>联系方式</p>
                     Shanghai Pudong New Area Century Avenue Century metropolis .<br/>
                     <img src="__static__/img/Group39.png" /><img src="__static__/img/Group40.png" /><img src="__static__/img/Group41.png" /><img src="__static__/img/Group42.png" />
                     <br/>
@@ -300,7 +333,7 @@
                     E-mail : Meet our designers .com
                 </div>
                 <div class="contact_bottom_right">
-                    <p>Send us a message</p>
+                    <p>给我们留言</p>
                     <input type="text" class="user_name" name="user_name" placeholder="Name"/>
                     <input type="text" class="user_email" name="user_email" placeholder="E-mail"/>
                     <input type="text" class="user_subject" name="user_subject" placeholder="Subject"/>
