--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -49,6 +49,7 @@
             <li>普特链路线图</li>
             <li>我们的团队</li>
             <li>白皮书</li>
+            <li>En</li>
         </ul>
     </div>
     <div class="honor">
@@ -147,7 +148,7 @@
                     统一管理物业的维护、收益、<br/>
                     代缴各类费用及税费的工作，<br/>
                     项目出售后，公司注销
-                    <img src="__static__/img/Group_16.png" class="pic_more"/>
+                    <!--<img src="__static__/img/Group_16.png" class="pic_more"/>-->
                 </div>
             <img src="__static__/img/156490.png" class="pic_3"/>
             <img src="__static__/img/289300.png" class="pic_4"/>
