--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -41,7 +41,7 @@
         <!--<div class="swiper-button-prev"></div>-->
     </div>
     <div class="top_meau">
-        <div class="left_meau">Architectural Group</div>
+        <div class="left_meau">Put Link</div>
         <ul>
             <li>首页</li>
             <li>关于普特链</li>
